--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Related Coursework</a>
         </li>
       </ul>
     </div>
@@ -209,65 +206,16 @@
             FIN 301 corporate finance</li>
           <li>
             <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            AGBM 320 markets & prices</li>\
+            AGBM 320 markets & prices</li>
           <li>
               <i class="fa-li fa fa-graduation-cap text-warning"></i>
             ECON 104 macro analytics</li>
-        </ul>
-        <p>
-            	
-          BUS INF SYS	SCM 200
-          STAT BUS 
-          decision	AGBM 497
-          AG TECH
-          entrepreneur
-             FIN 301
-          corporate
-          finance	AGBM 320
-          markets 
-          & prices	ECON 104
-          macro 
-          analytics	ACCTG 211
-          FIN ACC DEC
-          Making	SCM 301
-          SUP CHN 
-          MGMT
-          </p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-      <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            Google Analytics Certified Developer</li>
+              <i class="fa-li fa fa-graduation-cap text-warning"></i>
+            ACCTG 211 FIN ACC DEC Making</li>
           <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+              <i class="fa-li fa fa-graduation-cap text-warning"></i>
+            SCM 301 SUP CHN MGMT</li>
         </ul>
       </div>
     </section>
