--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:image" content="./img/logo.jpg" />
+  <link rel="shortcut icon" type="favicon.ico" href="./img/profile.jpg" />
   <meta name="description" content="">
   <meta name="author" content="">
 
